# multi-agentic-system

./: .env.example  .gitignore  Makefile  README.md  env.py  main.py  pyproject.toml
src/agents/: __init__.py  a2a_host.py  base.py  lead_agent.py  react.py  supervisor.py
src/callbacks/: __init__.py  agent_callback.py
src/core/: __init__.py  settings.py
src/history/: __init__.py  base.py  in_memory.py
src/prompts/: __init__.py  agent_prompts.py
src/tools/: __init__.py  tools.py
src/utils/: __init__.py  logger.py  tool.py  types.py
